# AMCL

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  README.md  package.windows.evb  pubspec.yaml  pyproject.toml
.github/workflows/: build.yml  release.yml
amcl/src/: amcl.py  get_resource.py  main.py
amcl/src/amcl/ui/: mainwindow.py
amcl/src/amcl/ui/components/: titlebar.py
amcl/src/amcl/ui/theme/: core.py  palettes.py
amcl/src/amcl/ui/utils/: frameless_helper.py
amcl/src/amcl/ui/window/: dev_window.py  main_window.py
amcl/src/amcl/utils/: amcl_logger.py  config.py  get_resource.py  shutdown_manager.py
amcl/src/harmony_ui/: harmony_button.py  harmony_card.py  harmony_input.py  harmony_progress.py  harmony_switch.py  harmony_theme.py  harmony_widget_base.py
docs/: README_zh-cn.md
launcher/: CMakeLists.txt  main.cpp  platform.cpp  platform.h
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: build.py  install.py
src/: main.rs
test/: widget_test.dart
ui/: app-window.slint
ui/components/: background.slint  drag_area.slint  icon_button.slint  titlebar.slint
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
